# Test-Application

./: .gitignore  README.md  cli.py  main.py  pyproject.toml
src/test_application/: __main__.py  cli.py
