[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_application"
version = "0.1.0"
description = "A test application"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    # Add your application's runtime dependencies here
]

[project.urls]
"Bug Tracker" = "https://github.com/tutomiko/Test-Application/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
